# yggcpp

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  LICENSE.txt  NOTES.txt  TODO.txt  YggInterfaceConfig.cmake.in  copy_seri.py  environment.yml  mingw-c++-5-3-thread.patch  pyproject.toml  requirements-test.txt  requirements.txt  run_tests.sh  setup.py  speedtests.sh
.run/: unittest.run.xml
cpp/: CMakeLists.txt  YggInterface.h  YggInterface.hpp
cpp/communicators/: AsyncComm.cpp  AsyncComm.hpp  ClientComm.cpp  ClientComm.hpp  CommBase.cpp  CommBase.hpp  CommContext.cpp  DefaultComm.hpp  FileComm.cpp  FileComm.hpp  ForkComm.cpp  ForkComm.hpp  IPCComm.cpp  IPCComm.hpp  MPIComm.cpp  MPIComm.hpp  Proxy.cpp  Proxy.hpp  RMQComm.cpp  RMQComm.hpp  RPCComm.cpp  Requests.hpp  ServerComm.cpp  ValueComm.cpp  ValueComm.hpp  Workers.hpp  WrapComm.cpp  WrapComm.hpp  ZMQComm.cpp  ZMQComm.hpp  comm_t.cpp  comms.hpp
cpp/datatypes/: dtype_t.hpp
cpp/include/: YggInterface.h  YggInterface.hpp
cpp/include/communicators/: AsyncComm.hpp  BufferComm.hpp  ClientComm.hpp  CommBase.hpp  CommContext.hpp  DefaultComm.hpp  FileComm.hpp  ForkComm.hpp  FunctionComm.hpp  IPCComm.hpp  MPIComm.hpp  ProcessMutex.hpp  Proxy.hpp  RESTComm.hpp  RMQComm.hpp  RPCComm.hpp  Requests.hpp  ServerComm.hpp  ValueComm.hpp  Workers.hpp  WrapComm.hpp  ZMQComm.hpp  comm_t.hpp  comms.hpp
cpp/include/datatypes/: dtype_t.h  dtype_t.hpp
cpp/include/utils/: Address.hpp  complex_type.hpp  constants.hpp  embedded_julia.hpp  embedded_languages.hpp  embedded_python.hpp  embedded_r.hpp  enums.hpp  enums_maps.hpp  enums_utils.hpp  interface.hpp  logging.hpp  multiprocessing.hpp  rapidjson_wrapper.defs  rapidjson_wrapper.hpp  rapidjson_wrapper2.hpp  regex.hpp  serialization.hpp  tools.hpp
cpp/src/communicators/: AsyncComm.cpp  BufferComm.cpp  ClientComm.cpp  CommBase.cpp  CommContext.cpp  FileComm.cpp  ForkComm.cpp  FunctionComm.cpp  IPCComm.cpp  MPIComm.cpp  ProcessMutex.cpp  Proxy.cpp  RESTComm.cpp  RMQComm.cpp  RPCComm.cpp  ServerComm.cpp  ValueComm.cpp  Workers.cpp  WrapComm.cpp  ZMQComm.cpp  comm_t.cpp
cpp/src/datatypes/: dtype_t.cpp
cpp/src/utils/: Address.cpp  embedded_julia.cpp  embedded_languages.cpp  embedded_python.cpp  embedded_r.cpp  enums_maps.cpp  enums_utils.cpp  logging.cpp  multiprocessing.cpp  rapidjson_wrapper.cpp  rapidjson_wrapper2.cpp  regex.cpp  serialization.cpp  tools.cpp
cpp/utils/: enums.hpp  logging.hpp  rapidjson_wrapper.cpp  rapidjson_wrapper.defs  rapidjson_wrapper.hpp  regex.hpp  serialization.cpp  serialization.hpp  tools.hpp
fortran/: CMakeLists.txt  YggInterface.F90  YggInterface.f90  YggInterface_arg.F90  YggInterface_arg.f90  YggInterface_c2f.F90  YggInterface_c2f.f90  YggInterface_cdef.F90  YggInterface_cdef.f90  YggInterface_conv.F90  YggInterface_copy.F90  YggInterface_enums.F90  YggInterface_interfaces.F90  YggInterface_map.F90  YggInterface_realloc.F90  YggInterface_realloc.f90  c_wrappers.c  c_wrappers.cpp  c_wrappers.h  c_wrappers_enums.c  c_wrappers_enums.h
fortran/tests/: CMakeLists.txt  test_ygg_client_1.f90  test_ygg_input_1.f90  test_ygg_input_any_1.f90  test_ygg_input_fmt_1.f90  test_ygg_input_generic_1.f90  test_ygg_input_json_array_1.f90  test_ygg_input_json_object_1.f90  test_ygg_input_obj_1.f90  test_ygg_input_ply_1.f90  test_ygg_input_table_1.f90  test_ygg_input_table_array_1.f90  test_ygg_input_table_array_realloc_1.f90  test_ygg_input_type_1.f90  test_ygg_output_1.f90  test_ygg_output_any_1.f90  test_ygg_output_fmt_1.f90  test_ygg_output_generic_1.f90  test_ygg_output_json_array_1.f90  test_ygg_output_json_object_1.f90  test_ygg_output_obj_1.f90  test_ygg_output_ply_1.f90  test_ygg_output_table_1.f90  test_ygg_output_table_array_1.f90  test_ygg_output_table_array_realloc_1.f90  test_ygg_output_type_1.f90  test_ygg_server_1.f90
julia/: CMakeLists.txt  YggInterface.jl  YggInterface_julia.cpp
julia/YggInterface/: LICENSE  Manifest.toml  Project.toml
julia/YggInterface/src/: YggInterface.jl
python/: CMakeLists.txt  YggInterface.cpp  communicators.cpp  pyUtils.cpp  pyUtils.hpp  pyYggCommBase.cpp  pyYggdrasil.cpp  utils.cpp
python/YggInterface/: __init__.py
python/pyYggdrasil/: __init__.py
python/test/: CMakeLists.txt  conftest.py  test_comm.py
test/: CMakeLists.txt  test_comm.py
test/speedtest/: CMakeLists.txt  CMakeLists.txt.in
test/speedtest/C/: CMakeLists.txt  speedtest.c.in
test/speedtest/CXX/: CMakeLists.txt
test/speedtest/FORTRAN/: CMakeLists.txt  speedtest.f90.in
test/speedtest/PYTHON/: CMakeLists.txt  speedtest.py.in
test/speedtest/Python/: speedtest.py.in
test/unittest/: CMakeLists.txt  arraytest.cpp  elf_hook.c  elf_hook.cpp  elf_hook.hpp  mock.cpp  mock.hpp  testutils.cpp  unittest.cpp  unittest.hpp  valuetest.cpp
test/unittest/tests/: arraytest.cpp  formattedtest.cpp  grouptest.cpp  testutils.cpp
tests/: CMakeLists.txt  example_julia.jl
tests/cpp/: CMakeLists.txt
tests/example_c/: CMakeLists.txt  example_c.c
tests/example_fortran/: CMakeLists.txt  example_fortran.F90
tests/fortran/: CMakeLists.txt  test_fails_1.f90  test_ygg_c_function_1.f90  test_ygg_client_1.f90  test_ygg_fortran-function_1.f90  test_ygg_function_1.f90  test_ygg_function_c_1.f90  test_ygg_function_fortran_1.f90  test_ygg_function_language_1.f90.in  test_ygg_input_1.f90  test_ygg_input_any_1.f90  test_ygg_input_fmt_1.f90  test_ygg_input_generic_1.f90  test_ygg_input_json_array_1.f90  test_ygg_input_json_object_1.f90  test_ygg_input_table_1.f90  test_ygg_input_table_array_1.f90  test_ygg_input_table_array_realloc_1.f90  test_ygg_input_type_1.f90  test_ygg_output_1.f90  test_ygg_output_any_1.f90  test_ygg_output_fmt_1.f90  test_ygg_output_json_array_1.f90  test_ygg_output_json_object_1.f90  test_ygg_output_ply_1.f90  test_ygg_output_table_1.f90  test_ygg_output_table_array_1.f90  test_ygg_output_table_array_realloc_1.f90  test_ygg_output_type_1.f90  test_ygg_server_1.f90
tests/julia/: CMakeLists.txt  runtests.jl
tests/python/: CMakeLists.txt  conftest.py  test_comm.py
tests/speedtest/: CMakeLists.txt  CMakeLists.txt.in  speedtest.jl.in
(+356 files in other folders)
